@@ -36,7 +36,7 @@ import org.springframework.test.context.TestPropertySource;
     classes = ChaosDemoApplication.class,
     webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @TestPropertySource("classpath:test-chaos-monkey-endpoints-disabled.properties")
-class ChaosMonkeyRequestScopeRestEndpointDisabledIntegration {
+class ChaosMonkeyRequestScopeRestEndpointDisabledIntegrationTest {
 
   @LocalServerPort private int serverPort;
 
